app.properties: update default listen address

--- a/app.properties
+++ b/app.properties
@@ -1,4 +1,4 @@
-grpc.listenAddress=localhost:5300
+grpc.listenAddress=0.0.0.0:5300
 kvs.engine=file
 kvs.fileKVSPath=/tmp/test1337
 cluster.listenAddress=localhost:5123
