--- a/app.properties
+++ b/app.properties
@@ -1,5 +1,6 @@
 grpc.listenAddress=0.0.0.0:5300
 kvs.engine=file
 kvs.fileKVSPath=/tmp/test1337
+tss.engine=inmem
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
