server: ability to specify LSM storage via config file

--- a/app.properties
+++ b/app.properties
@@ -1,7 +1,7 @@
 grpc.listenAddress=0.0.0.0:5300
 kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
-tss.engine=file
+tss.engine=lsm
 ts.filePath=/tmp/gotsdb/tss
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
