--- a/app.properties
+++ b/app.properties
@@ -3,6 +3,6 @@ kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
 tss.engine=lsm
 ts.filePath=/tmp/gotsdb/tss
-server.mode=cluster
+server.mode=single-node
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
