--- a/app.properties
+++ b/app.properties
@@ -2,7 +2,7 @@ grpc.listenAddress=0.0.0.0:5300
 kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
 tss.engine=lsm
-ts.filePath=/tmp/gotsdb/tss
+tss.filePath=/tmp/gotsdb/tss
 server.mode=single-node
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
