--- a/app.properties
+++ b/app.properties
@@ -3,6 +3,10 @@ kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
 tss.engine=lsm
 tss.filePath=/tmp/gotsdb/tss
-server.mode=single-node
+server.mode=cluster
+#cluster, single-instance
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
+cluster.readingConsistency=none
+#none, any, all
+cluster.writingConsistency=none
