server.go: support for configuring new tss engines

--- a/config/app.properties
+++ b/config/app.properties
@@ -1,9 +1,9 @@
 grpc.listenAddress=0.0.0.0:5300
 kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
-tss.engine=lsm
+tss.engine=bbolt
 tss.filePath=/tmp/gotsdb/tss
-server.mode=cluster
+server.mode=single-instance
 #cluster, single-instance
 cluster.listenAddress=localhost:5123
 cluster.knownNodes=localhost:5123;localhost:5124
