config/app.properties: add example for tss perform expiration

--- a/config/app.properties
+++ b/config/app.properties
@@ -3,6 +3,7 @@ kvs.engine=file
 kvs.fileKVSPath=/tmp/gotsdb/kvs
 tss.engine=bbolt
 tss.filePath=/tmp/gotsdb/tss
+tss.performExpirationEveryMs=10000
 server.mode=single-instance
 #cluster, single-instance
 cluster.listenAddress=localhost:5123
